yml file changes

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 sudo: required
 services:
-  - docker
+  docker
 
 before_install:
-  - docker build -t rockysmat/docker-react -f Dockerfile.dev .
+  docker build -t rockysmat/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run rockysmat/docker-react npm run test -- --coverage
+  docker run rockysmat/docker-react npm run test -- --coverage
